--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
 body{
+    margin: 0;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    display: flex;
     background: #009933;
+}
+
+.container{
+    min-height: 100vh;
+    width: 95%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    background-color: red;
 }
