--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'mainFont';
+    src: url('./Roboto-Regular.ttf');
+}
+
 body{
     margin: 0;
     position: relative;
@@ -9,10 +14,46 @@ body{
 
 .container{
     min-height: 100vh;
-    width: 95%;
+    width: 98%;
     justify-content: center;
     align-items: center;
     display: flex;
     flex-direction: column;
-    background-color: red;
+    font-family: 'mainFont';
+}
+
+#theText{
+    background: transparent;
+    border: none;
+    font-family: 'mainFont';
+    font-size: 15px;
+}
+
+#theText::placeholder{
+    color: whitesmoke;
+}
+
+#theText:focus{
+    outline: none;
+}
+
+.output{
+    width: auto;
+    height: auto;
+    padding: 5px 7px;
+    font-size: 25px;
+}
+
+.c-top{
+    width: 98%;
+    height: 85vh;
+    background: red;
+    align-items: center;
+    justify-content: center;
+}
+
+.c-bottom{
+    width: 98%;
+    height: 10vh;
+    background: blue;
 }
